Add organization details settings (#220)
* Add favicon

* Add organization details form

* Add tests

* Delete the obsolete migration service
